# comp211-lecture

./: instructions.txt
2-23/: ex1.c  ex2.c
2-25/: ex1.c  ex2.c
2-25/solution/: ex1.c  ex2.c
3-2/: ex1.c  ex2.c
3-2/solution/: ex2.c
3-23/: Makefile
3-23/include/: array_utils.h  math_utils.h  pointer.h
3-23/src/: array_utils.c  math_utils.c  pointer.c
3-23/support/test/unit/: CMakeLists.txt
3-23/test/unit/: array_utils.cpp  math_utils_test.cpp  pointer_test.cpp
3-5/: coffee_shop.c
3-5/solution/: coffee_shop.c
3-6/solution/: dynamic_coffee_shop.c
3-9/: petvec.c
